# IC_Project2

./: .gitignore  README.md
opencv-bin/: arial_180.ppm  arial_2.ppm  arial_270.ppm  arial_90.ppm  arial_aum200.ppm  arial_aum60.ppm  arial_changedblue.ppm  arial_changedgreen.ppm  arial_changedred.ppm  arial_dim200.ppm  arial_dim60.ppm  arial_horizontal.ppm  arial_negative.ppm  arial_vertical.ppm  program1  program2a  program2b  program2c  program2d  program4and5dec  program4and5enc  program4dec  program4enc  sample01_enc
programs/: .gitignore  CMakeLists.txt  bitStream.h  golomb.h  program1.cpp  program2a.cpp  program2b.cpp  program2c.cpp  program2d.cpp  program4and5dec.cpp  program4and5enc.cpp  program4dec.cpp  program4enc.cpp
